--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 Genom 2.6, xxx xx 2010.
 
+107. Add generation of a new kind of client, a tclserv C client
 106. In PrintXML, Print unsigned chars with "%u" instead of "%c"
 105. Add 'rexec server args' procedure in genom tcl package
 104. Add lsmbox ?servers? procedure in genom tcl package
