Add documentation about tclserv C Client library
While here, fix two old reference to Propice

--- a/doc/user_guide/tex/genom-anx-files.tex
+++ b/doc/user_guide/tex/genom-anx-files.tex
@@ -87,6 +87,16 @@ in the codels}). \\
  \hline
  \texttt{openprs/}  & \\
  \hline
+ \multicolumn{2}{l}{} \\
+
+ \hline
+ \multicolumn{2}{|l|}{Tclserv Client:} \\
+ \hline
+ \texttt{tclservClient/demoTclservClientDecode.c}  & Transform string returned by \texttt{tclserv} into a C structure\\
+ \texttt{tclservClient/demoTclservClientEncode.c}  & Transform a C structure into a string for \texttt{tclserv} \\
+ \texttt{tclservClient/demoTclservClientMsgLib.c} & Use it to control modules using \texttt{tclserv} protocol\\
+ \hline
+ \multicolumn{2}{l}{} \\
  \end{tabularx}
 \end{center}
 
