Update the documentation to match new prototype of tclservClient client

--- a/doc/user_guide/tex/genom-anx-files.tex
+++ b/doc/user_guide/tex/genom-anx-files.tex
@@ -95,6 +95,8 @@ in the codels}). \\
  \texttt{tclservClient/demoTclservClientDecode.c}  & Transform string returned by \texttt{tclserv} into a C structure\\
  \texttt{tclservClient/demoTclservClientEncode.c}  & Transform a C structure into a string for \texttt{tclserv} \\
  \texttt{tclservClient/demoTclservClientMsgLib.c} & Use it to control modules using \texttt{tclserv} protocol\\
+ \texttt{tclservClient/demoError.c} & Encode and decode module error encoded
+ by \texttt{tclserv} protocol \\
  \hline
  \multicolumn{2}{l}{} \\
  \end{tabularx}
