doc: mention that tclserv has to be installed separatly now.

--- a/doc/user_guide/tex/genom-configuration.tex
+++ b/doc/user_guide/tex/genom-configuration.tex
@@ -105,6 +105,12 @@ Linux (with glibc2), and NetBSD (2.0 and later).
 There is also some code to support RTAI and LXRT 3.0, but it is currently
 untested and unsupported (this may change again in the future) 
 
+\subsubsection{tclserv}
+
+Starting with \GenoM{} version 2.7, \texttt{tclserv} is provided as an
+external package. It will need to be installed separately to be able
+to use it as described in section~\ref{sec|tcl}.
+
 \subsubsection{libedit / editline}
 
 The \texttt{editline} library provides generic line editing and history
