Explicitely reject OK as failure code.
Listing OK is wrong because the generated constant (S_xxx_OK)
will not be the same as OK, and will always produce a failure
of the associated codel, which is not what the programmer expects.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
-Genom 2.7, xxx xx 2011.
+Genom 2.8, xxx xx 2011.
+
+118. Explicitely reject OK as failure code.
+
+Genom 2.7, april 26 2011.
 
 117. Remove tclserv. It's now a separate package.
 116. Implement an error representation for tclserv_client.
